Create and implement multi combo editors.

--- a/src/main/java/com/dgs/dapc/itemDB/javafx/main/tabs/items/ItemsTab.fxml
+++ b/src/main/java/com/dgs/dapc/itemDB/javafx/main/tabs/items/ItemsTab.fxml
@@ -70,7 +70,7 @@
                      <HBox spacing="4.0">
                         <children>
                            <TextField fx:id="genericQueryInput" maxWidth="1.7976931348623157E308" onAction="#runSimpleQuery" promptText="General Search" HBox.hgrow="SOMETIMES" />
-                           <ToggleButton fx:id="genericRegExp" maxHeight="1.7976931348623157E308" minWidth="-Infinity" mnemonicParsing="false" HBox.hgrow="ALWAYS" styleClass="icon-button-regexp">
+                           <ToggleButton fx:id="genericRegExp" maxHeight="1.7976931348623157E308" minWidth="-Infinity" mnemonicParsing="false" styleClass="icon-button-regexp" HBox.hgrow="ALWAYS">
                               <tooltip>
                                  <Tooltip text="Use RegExp" />
                               </tooltip>
@@ -215,15 +215,15 @@
                        <RowConstraints fillHeight="false" valignment="CENTER" vgrow="NEVER" />
                      </rowConstraints>
                      <children>
-                              <Spinner fx:id="spinnerPerPage" editable="true" maxWidth="1.7976931348623157E308" minWidth="0.0" styleClass="split-arrows-horizontal" />
-                              <Spinner fx:id="spinnerPage" editable="true" maxWidth="1.7976931348623157E308" minWidth="0.0" styleClass="split-arrows-horizontal" GridPane.rowIndex="1" />
-                              <Label text="Page" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <Label text="Per Page" GridPane.columnIndex="1" />
                              <Pagination fx:id="pagination" maxPageIndicatorCount="32" maxWidth="1.7976931348623157E308" minWidth="0.0" style="-fx-page-information-visible: false;" GridPane.columnSpan="2147483647" GridPane.rowIndex="2">
                            <GridPane.margin>
                               <Insets bottom="-16.0" top="-18.0" />
                            </GridPane.margin>
                              </Pagination>
+                              <Spinner fx:id="spinnerPerPage" editable="true" maxWidth="1.7976931348623157E308" minWidth="0.0" styleClass="split-arrows-horizontal" />
+                              <Spinner fx:id="spinnerPage" editable="true" maxWidth="1.7976931348623157E308" minWidth="0.0" styleClass="split-arrows-horizontal" GridPane.rowIndex="1" />
+                              <Label text="Page" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <Label text="Per Page" GridPane.columnIndex="1" />
                         <Label fx:id="countLabel" text="Label" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
                      </children>
                      <padding>
