--- a/src/main/java/com/dgs/dapc/itemDB/javafx/main/editor/itemEditor/ItemEditor.fxml
+++ b/src/main/java/com/dgs/dapc/itemDB/javafx/main/editor/itemEditor/ItemEditor.fxml
@@ -1,11 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.dgs.dapc.itemDB.javafx.nullComboBox.NullCombo?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.Tooltip?>
+<?import javafx.scene.control.TreeTableColumn?>
+<?import javafx.scene.control.TreeTableView?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.*?>
-<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="750.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dgs.dapc.itemDB.javafx.main.editor.itemEditor.ItemEditorController">
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+
+<BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="750.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.dgs.dapc.itemDB.javafx.main.editor.itemEditor.ItemEditorController">
    <left>
       <ScrollPane fitToHeight="true" fitToWidth="true" prefWidth="300.0" BorderPane.alignment="CENTER">
          <content>
@@ -72,7 +89,7 @@
                         <HBox spacing="4.0">
                            <children>
                               <NullCombo fx:id="manufacturerSelect" maxWidth="1.7976931348623157E308" promptText="Select Manufacturer" HBox.hgrow="SOMETIMES" />
-                              <ToggleButton fx:id="manufacturersRegexp" mnemonicParsing="false" HBox.hgrow="ALWAYS" styleClass="icon-button-regexp">
+                              <ToggleButton fx:id="manufacturersRegexp" mnemonicParsing="false" styleClass="icon-button-regexp" HBox.hgrow="ALWAYS">
                                  <tooltip>
                                     <Tooltip text="Use RegExp" />
                                  </tooltip>
@@ -104,7 +121,7 @@
       </ScrollPane>
    </right>
    <bottom>
-      <SplitPane dividerPositions="0.25, 0.75">
+      <SplitPane dividerPositions="0.2, 0.75">
          <items>
             <TitledPane collapsible="false" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Tags">
                <content>
@@ -120,7 +137,7 @@
                         <HBox spacing="4.0">
                            <children>
                               <NullCombo fx:id="tagSelect" maxWidth="1.7976931348623157E308" promptText="Select Tag" HBox.hgrow="SOMETIMES" />
-                              <ToggleButton fx:id="tagsRegexp" mnemonicParsing="false" HBox.hgrow="ALWAYS" styleClass="icon-button-regexp">
+                              <ToggleButton fx:id="tagsRegexp" mnemonicParsing="false" styleClass="icon-button-regexp" HBox.hgrow="ALWAYS">
                                  <tooltip>
                                     <Tooltip text="Use RegExp" />
                                  </tooltip>
@@ -169,7 +186,7 @@
                                   <TreeTableColumn fx:id="placementsNameColumn" prefWidth="75.0" text="Name" />
                                     <TreeTableColumn editable="false" prefWidth="75.0" text="Placement">
                                        <columns>
-                                          <TreeTableColumn fx:id="placementsLocationColumn" editable="false" prefWidth="75.0" text="Location" />
+                                          <TreeTableColumn fx:id="placementsLocationColumn" prefWidth="125.0" text="Location" />
                                           <TreeTableColumn fx:id="placementsCoordinatesColumn" editable="false" prefWidth="75.0" text="Row, Col, ..." />
                                        </columns>
                                     </TreeTableColumn>
@@ -181,8 +198,8 @@
                                        </columns>
                                     </TreeTableColumn>
                                     <TreeTableColumn fx:id="placementsSerialColumn" prefWidth="75.0" text="Serial No." />
-                                    <TreeTableColumn fx:id="placementsDesignationsColumn" editable="false" prefWidth="75.0" text="Designations" />
-                                  <TreeTableColumn fx:id="placementsDetailsColumn" prefWidth="75.0" text="Details" visible="false" />
+                                    <TreeTableColumn fx:id="placementsDesignationsColumn" editable="false" prefWidth="90.0" text="Designations" />
+                                  <TreeTableColumn fx:id="placementsDetailsColumn" prefWidth="119.0" text="Details" />
                                 </columns>
                               </TreeTableView>
                            </content>
